# Antigravity-Manager

./: .gitignore  README.md  README_EN.md  WEB_UPSTREAM_CHANGES.md  WEB_VERSION.md  package-lock.json  package.json  test_image_gen.py  test_result_claude.txt  test_result_gemini.txt  test_result_gemini_minimal.txt  test_result_gemini_retry.txt  test_single_claude.py  test_single_gemini.py  test_single_gemini_minimal.py  test_single_openai.py
Casks/: antigravity-tools.rb
distribution/homebrew/: antigravity.rb
docker/: Dockerfile
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/modules/: config.rs  mod.rs  oauth_server.rs  tray.rs
src-tauri/src/proxy/: monitor.rs  server.rs
src-tauri/src/proxy/common/: json_schema.rs  (+1 more)
src/components/layout/: Navbar.tsx
src/components/proxy/: ProxyMonitor.tsx
src/locales/: en.json  zh.json
src/pages/: ApiProxy.tsx  Settings.tsx
web/: App.css  App.tsx  README.md  index.html  main.tsx  package-lock.json  package.json  vite.config.ts
web-bridge/: Cargo.toml  README.md
web-bridge/src/: main.rs
web/components/accounts/: AccountGrid.tsx  AccountTable.tsx  AddAccountDialog.tsx
web/components/common/: ThemeManager.tsx
web/components/layout/: Layout.tsx  Navbar.tsx
web/components/proxy/: ProxyMonitor.tsx
web/locales/: en.json  zh.json
web/pages/: Accounts.tsx  ApiProxy.tsx  Dashboard.tsx  Monitor.tsx  Settings.tsx
web/services/: accountService.ts  api.ts  configService.ts
web/stores/: networkMonitorStore.ts  useAccountStore.ts
web/utils/: format.ts  request.ts
(+7 files in other folders)
